Bug 281596 - crash happend when clicked "open new main window in Kmail"
Summary: crash happend when clicked "open new main window in Kmail"
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-08 06:37 UTC by m.wege
Modified: 2011-09-09 18:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description m.wege 2011-09-08 06:37:32 UTC
Application: kwin (4.7.00 (4.7.0))
KDE Platform Version: 4.7.00 (4.7.0)
Qt Version: 4.7.2
Operating System: Linux 3.0.0-9-generic x86_64
Distribution: Ubuntu 11.04

-- Information about the crash:
- What I was doing when the application crashed: crash happend when clicked "open new main window in Kmail".

-- Backtrace:
Application: KWin (kwin), signal: Segmentation fault
[Current thread is 1 (Thread 0x7fb09a08b7a0 (LWP 3428))]

Thread 3 (Thread 0x7fb08de60700 (LWP 3917)):
#0  0x00000032ebede143 in select () at ../sysdeps/unix/syscall-template.S:82
#1  0x000000384fd8332c in qt_safe_select (nfds=18, fdread=0x7fb09035ecf0, fdwrite=0x7fb09035ef88, fdexcept=0x7fb09035f220, orig_timeout=<value optimized out>) at kernel/qcore_unix.cpp:82
#2  0x000000384fd883d0 in QEventDispatcherUNIXPrivate::doSelect (this=0x7fb09035eb30, flags=..., timeout=0x0) at kernel/qeventdispatcher_unix.cpp:219
#3  0x000000384fd8904a in QEventDispatcherUNIX::processEvents (this=0x7fb09035ea90, flags=...) at kernel/qeventdispatcher_unix.cpp:919
#4  0x000000384fd5a882 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x000000384fd5aabc in QEventLoop::exec (this=0x7fb08de5fdb0, flags=...) at kernel/qeventloop.cpp:201
#6  0x000000384fc71924 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:492
#7  0x000000384fd3cc2f in QInotifyFileSystemWatcherEngine::run (this=0x3a6ce50) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x000000384fc74175 in QThreadPrivate::start (arg=0x3a6ce50) at thread/qthread_unix.cpp:320
#9  0x00000032eca06d8c in start_thread (arg=0x7fb08de60700) at pthread_create.c:304
#10 0x00000032ebee604d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7fb08d64f700 (LWP 3918)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00000038569912a2 in QTWTF::TCMalloc_PageHeap::scavengerThread (this=0x3856caa180) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:2359
#2  0x00000038569912d9 in QTWTF::TCMalloc_PageHeap::runScavengerThread (context=0x3856cb8254) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:1464
#3  0x00000032eca06d8c in start_thread (arg=0x7fb08d64f700) at pthread_create.c:304
#4  0x00000032ebee604d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fb09a08b7a0 (LWP 3428)):
[KCrash Handler]
#6  KWin::ClientGroup::add (this=0x0, c=0x48e5f30, before=-1, becomeVisible=true) at ../../kwin/clientgroup.cpp:349
#7  0x00000032c688b054 in KWin::Client::manage (this=0x48e5f30, w=<value optimized out>, isMapped=<value optimized out>) at ../../kwin/manage.cpp:320
#8  0x00000032c683b9b2 in KWin::Workspace::createClient (this=0x7fb090362ea0, w=59964843, is_mapped=false) at ../../kwin/workspace.cpp:546
#9  0x00000032c687c640 in KWin::Workspace::workspaceEvent (this=0x7fb090362ea0, e=0x7fff902b5850) at ../../kwin/events.cpp:354
#10 0x00000032c6858448 in KWin::Application::x11EventFilter (this=0x7fff902b5a90, e=0x7fff902b5850) at ../../kwin/main.cpp:356
#11 0x00000038516288f5 in qt_x11EventFilter (ev=0x7fff902b5850) at kernel/qapplication_x11.cpp:440
#12 0x000000385163a0a0 in QApplication::x11ProcessEvent (this=0x7fff902b5a90, event=0x7fff902b5850) at kernel/qapplication_x11.cpp:3392
#13 0x0000003851664224 in QEventDispatcherX11::processEvents (this=0x252b2e0, flags=...) at kernel/qeventdispatcher_x11.cpp:132
#14 0x000000384fd5a882 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#15 0x000000384fd5aabc in QEventLoop::exec (this=0x7fff902b59d0, flags=...) at kernel/qeventloop.cpp:201
#16 0x000000384fd5eecb in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1008
#17 0x00000032c685abfe in kdemain (argc=<value optimized out>, argv=0x7fff902b60f8) at ../../kwin/main.cpp:514
#18 0x00000032ebe1eeff in __libc_start_main (main=0x400730 <main(int, char**)>, argc=3, ubp_av=0x7fff902b60f8, init=<value optimized out>, fini=<value optimized out>, rtld_fini=<value optimized out>, stack_end=0x7fff902b60e8) at libc-start.c:226
#19 0x0000000000400659 in _start ()

This bug may be a duplicate of or related to bug 229292.

Possible duplicates by query: bug 271483.

Reported using DrKonqi
Comment 1 Thomas Lübking 2011-09-09 16:20:07 UTC
Git commit f3ca7234ef4329b45bcd369aa49a70972a754302 by Thomas Lübking.
Committed on 08/09/2011 at 22:19.
Pushed by luebking into branch 'KDE/4.7'.

fix yet another fun-with-pointers tabbing segfault

BUG: 281596

M  +1    -1    kwin/manage.cpp

http://commits.kde.org/kde-workspace/f3ca7234ef4329b45bcd369aa49a70972a754302
Comment 2 Thomas Lübking 2011-09-09 18:15:25 UTC
Git commit a28ded36b72272bfd53e3b310b662f30aee0f16c by Thomas Lübking.
Committed on 08/09/2011 at 22:19.
Pushed by luebking into branch 'master'.

fix yet another fun-with-pointers tabbing segfault

BUG: 281596
(cherry picked from commit f3ca7234ef4329b45bcd369aa49a70972a754302)

M  +1    -1    kwin/manage.cpp

http://commits.kde.org/kde-workspace/a28ded36b72272bfd53e3b310b662f30aee0f16c