fix yet another fun-with-pointers tabbing segfault

BUG: 281596
(cherry picked from commit f3ca7234ef4329b45bcd369aa49a70972a754302)